cdm updated: fix vertical align

--- a/cdm.css
+++ b/cdm.css
@@ -24,6 +24,7 @@ div.cdmHeader span.updated {
 	font-weight : normal;
 	font-size : 11px;
 	white-space : nowrap;
+	vertical-align : middle;
 }
 
 div.cdmHeader input {
